# Flutter-App

./: .gitignore  README.md  docker-compose.yml  flow_chart(LLM).drawio  flow_chart(total_system).drawio  requirements.txt
fastapi_app/: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
fastapi_app/app/: main.py
fastapi_app/app/core/: config.py  database.py  kafka_config.py
fastapi_app/app/examples/: llama_index_example.py
fastapi_app/app/models/: __init__.py  auth_base.py  chat_base.py  file_scan_base.py  graph_state.py  img_scan_base.py  kafka_base.py  menu_base.py  request_base.py
fastapi_app/app/prompts/: db_node.yaml  db_query.yaml  db_result.yaml  eval_node.yaml  init_prompt.yaml  main_model.yaml  main_node.yaml  prompt_loader.py
fastapi_app/app/routers/: auth.py  chat.py  doc_scan.py  image_scan.py  kafka_chat.py  menu_info.py  sample_router.py  single_chat.py  status.py  user_info.py  ws_chat.py
fastapi_app/app/routers/controller/: agent_ctl.py  ai_resp_ctl.py  db_ctl.py  llm_ctl.py  ocr_ctl.py  rag_ctl.py  res_ctl.py
fastapi_app/app/routers/controller/persona/: supervisor.yaml  supervisor_prompt.py
fastapi_app/app/utils/: logger.py
fastapi_app/tests/: menu_extractor.py  test_img_scan.py
fastapi_app/tests/images/extracted_menus/: menu_2.txt
kafka-serv/: .gitignore  docker-compose.yml  setup.py
kafka-serv/src/kafka_service/: __init__.py  base_consumer.py  chat_consumer.py
kafka-serv/src/kafka_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kafka-serv/src/kafka_service/utils/: logger.py
kafka-serv/tests/: test_consumer.py  test_producer.py
my_first_app/: .editorconfig  .gitignore  analysis_options.yaml  pubspec.yaml
my_first_app/lib/: main.dart
my_first_app/lib/chat_view/: ai_chat_ctl.dart  ai_chat_view.dart
my_first_app/lib/chat_widget/: ai_chat_ctl.dart  ai_chat_widget.dart  chat_model.dart  loading_widget.dart
my_first_app/lib/common/: logger.dart  ws_conn.dart  ws_connt.dart
my_first_app/lib/controllers/: ai_chat_controller.dart  ai_chat_ctl.dart
my_first_app/lib/home_view/: home_btn.dart  home_ctl.dart  home_view.dart
my_first_app/lib/home_widget/: home_widget.dart
