[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application with RAG functionality"
authors = ["Jae hoon Choi <dev_matagi@kakao.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
python-multipart = "^0.0.6"
pypdf = "*"
langchain = "*"
langchain-community = "*"
langchain-core = "*"
langchain-openai = "*"
langchain-chroma = "*"
langchain-qdrant = "*"
langchain-ollama = "*"
faiss-cpu = "*"
langchain-text-splitters = "^0.3.8"
chromadb = "^0.5.17"
qdrant-client = "^1.7.0"
sentence-transformers = "^2.2.2"
transformers = "^4.35.2"
torch = "^2.1.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
pydantic = { version = "^2.5.2", extras = ["email"] }
asyncpg = "*"
langsmith = "*"
matplotlib = "*"
langgraph = "*"
psutil = "*"
aiokafka = "*"
langgraph-checkpoint = "*"
langgraph-prebuilt = "*"
llama-index-vector-stores-chroma = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.4"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0" 