[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application with RAG functionality"
authors = ["Jae hoon Choi <dev_matagi@kakao.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
python-multipart = "*"
pypdf = "*"
langchain = "*"
langchain-community = "*"
langchain-core = "*"
langchain-openai = "*"
langchain-chroma = "*"
langchain-qdrant = "*"
langchain-ollama = "*"
faiss-cpu = "*"
langchain-text-splitters = "*"
chromadb = "*"
qdrant-client = "*"
sentence-transformers = "*"
transformers = "*"
torch = "*"
scikit-learn = "*"
scipy = "*"
pydantic = { version = "*", extras = ["email"] }
asyncpg = "*"
langsmith = "*"
matplotlib = "*"
langgraph = "*"
psutil = "*"
aiokafka = "*"
langgraph-checkpoint = "*"
langgraph-prebuilt = "*"
llama-index-vector-stores-chroma = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pylint = "^2.17.4"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0" 